<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Integer Calculator"
        android:fontFamily="@font/nanumsquare"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:inputType="textPersonName"
        android:fontFamily="@font/nanumsquare"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/seven"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/eight"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/nine"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/buttonDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/division"
            android:background="@drawable/calculation_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/four"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/five"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/six"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:background="@drawable/calculation_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/one"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/three"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:background="@drawable/calculation_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:text="@string/zero"
            android:background="@drawable/number_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/buttonResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/result"
            android:background="@drawable/calculation_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:background="@drawable/calculation_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:background="@drawable/calculation_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="409dp"
        android:layout_height="459dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/buttonPower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/power"
            android:visibility="visible"
            android:background="@drawable/engineering_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/buttonSquareRoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/square_root"
            android:visibility="visible"
            android:background="@drawable/engineering_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/buttonSin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/sin"
            android:visibility="visible"
            android:background="@drawable/engineering_button"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>